test_runtime_init = executable('test_runtime_init', 'test_rt_init.cpp',dependencies:[app_test_dependency])

test('cli_test_runtime_init', test_runtime_init)


# if get_option('use_dynamic_module')
#   t3 = executable('test_test_pymodule', 'test_pymodule.cpp',dependencies:[app_test_dependency_dyn])
#   test('test test_pymodule',t3)
# endif 
