t2 = executable('test_newton', 'test_newton.cpp',dependencies:[common_dependecy])
test_env_var = executable('test_env_var', 'test_env_var.cpp',dependencies:[common_dependecy])


# test_kokkos_vector = executable('test_kokkos_vector', 'test_kokkos_vector.cpp',dependencies:[common_dependecy])
# test('test_kokkos_vector', test_kokkos_vector  )
test('test_newton', t2  )
test('test_env_var', test_env_var  )
