# test_backward_euler = executable(
#   'test_backward_euler',
#   'test_backward_euler.cpp',
#   dependencies: [biomodel_dependency,eigen_dep],
#   include_directories: [public_include_dir, '../includes'])

  test_utils_1 = executable(
  'test_utils_1',
  'test_utils_1.cpp',
  dependencies: [biomodel_dependency],
  include_directories: [public_include_dir])


# test('test_backward_euler',test_backward_euler)
test('test_utils_1',test_utils_1)
